# HWSeria

./: CMakeLists.txt  README.md
HWSeriaLib/: CMakeLists.txt
HWSeriaLib/include/: DataBuf.h  HWSeria.h  HWSeriaDataBuf.h  HWSeriable.h
HWSeriaLib/src/: DataBuf.cpp  HWSeria.cpp  HWSeriaDataBuf.cpp  HWSeriable.cpp
test/: CMakeLists.txt  DataStruct.cpp  DataStruct.h  SubD.cpp  SubD.h  SubSubD.cpp  SubSubD.h  main.cpp
